--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="detailBox" align="center">
                 <div>
                     <h1>Hi 👋, I'm Rahul Kumar Mandal (C.M.Chikku) </h1>
-                    <h2>A passionate developer from India</h2>
+                    <h2>A passionate designer from India</h2>
                 </div>
                 <p align="center">
                     <img align="left"
